# foundationdb-gateway

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-image.yml  tests.yaml
foundationdb/: Cargo.toml
foundationdb/src/: datamodel.rs  lib.rs  lock.rs
redisgw/: .dockerignore  Cargo.toml  Dockerfile
redisgw/src/: command.rs  config.rs  datamodel.rs  foundationdb.rs  gateway.rs  lib.rs  main.rs  operations.rs  server.rs  tests.rs
redisgw/src/connection/: commands.rs  gateway.rs  mod.rs  operations.rs
redisgw/src/connection/tests/: mod.rs
redisgw/src/connection/tests/e2e/: ping.rs  quit.rs
redisgw/src/datamodel/: mapmodel.rs  mod.rs  simplemodel.rs
redisgw/src/list/: commands.rs  gateway.rs  mod.rs  operations.rs
redisgw/src/server/: commands.rs  datamodel.rs  gateway.rs  mod.rs
redisgw/src/server/operations/: mod.rs  parse.rs  traits.rs
redisgw/src/server/tests/: mod.rs
redisgw/src/server/tests/e2e/: acl.rs  whoami.rs
redisgw/src/server/tests/unit/: datamodel.rs
redisgw/src/set/: commands.rs  gateway.rs  operations.rs
redisgw/src/string/: commands.rs  datamodel.rs  gateway.rs  mod.rs
redisgw/src/string/operations/: mod.rs  parse.rs  traits.rs  types.rs
redisgw/src/string/tests/: mod.rs
redisgw/src/string/tests/e2e/: string.rs
redisgw/src/string/tests/unit/: string.rs  ttl.rs
redisgw/src/tests/: TEST_PLAN.md  e2e.rs  string.rs  ttl.rs  util.rs
redisgw/src/tests/e2e/: mod.rs  string.rs  util.rs
redisgw/src/tests/unit/: mod.rs  string.rs  ttl.rs
