[package]
name = "fdb"
version = "0.1.0"
edition = "2024"

[dependencies]
foundationdb = { version = "=0.9.2", features = [
    "tenant-experimental",
    "fdb-7_3",
] }
futures = "=0.3.31"
tokio = { version = "=1.44.1", features = ["macros", "rt-multi-thread"] }
log = "=0.4.27"
env_logger = "=0.11"
futures-util = "=0.3.31"
async-stream = "=0.3.6"
thiserror = "2.0.12"

[dev-dependencies]
fdb-testcontainer = { git = "https://gitlab.com/Akanoa/fdb-testcontainer.git" }
